--- a/public/style/code.less
+++ b/public/style/code.less
@@ -9,7 +9,7 @@
   overflow: auto;
 
   &.error{
-    color:@red;
-    background-color: #2B2B2B;
+    //color:@e;
+    //background-color: #2B2B2B;
   }
 }
