--- a/views/404.ejs
+++ b/views/404.ejs
@@ -1,4 +1,4 @@
-<% include head %>
+<% include head.ejs %>
 <div class="container">
 
     <h1 class="center big">404</h1>
@@ -15,6 +15,4 @@
 
 </div>
 
-<img src="/img/confused_vincent_vega.gif" class="abs-bottom">
-
-<% include foot %>
+<% include foot.ejs %>
