--- a/views/head-no-nav.ejs
+++ b/views/head-no-nav.ejs
@@ -9,23 +9,14 @@
     <meta name="author" content="">
     <!--<link rel="icon" href="/favicon.ico">-->
 
-    <title>SynBio Shop</title>
+    <title>TransPlant</title>
 
-    <link href="/components/elegant-icons/css/style.css" rel="stylesheet">
-    <link href="/components/animate.css/animate.min.css" rel="stylesheet">
     <link href="/style/style.min.css" rel="stylesheet">
-
-    <script src="/components/react/react.js"></script>
-    <script src="/components/react/react-dom.min.js"></script>
-
+    <link href="/components/simple-line-icons/css/simple-line-icons.css" rel="stylesheet">
     <script src="/components/jquery/dist/jquery.min.js"></script>
 
 </head>
 
 <body>
-
-<script>
-    document.signedInUser = JSON.parse('<%- JSON.stringify(locals.signedInUser) %>');
-</script>
 
 <% include flashes.ejs %>
