--- a/views/signin.ejs
+++ b/views/signin.ejs
@@ -5,22 +5,23 @@
         <div class="login-box">
             <div class="login-header">
                 <!--<img src="/img/logo.png">-->
-                <a href="/">SynBio</a>
+                <a href="/">TransPlant</a>
             </div>
             <div class="login-body">
                 <p class="center">Sign in to continue</p>
 
                 <form method="post" action="/signin">
                     <div class="form-group has-feedback">
-                        <input class="wide has-icon" type="text" id="username" name="username" placeholder="Username"
+                        <input class="wide has-icon center" type="text" id="username" name="username"
+                               placeholder="Username"
                                required
                                autofocus>
-                        <span class="icon_mail_alt input-icon"></span>
+                        <span class="icon-user input-icon"></span>
                     </div>
                     <div class="form-group has-feedback">
-                        <input class="wide has-icon" type="password" id="password" name="password"
+                        <input class="wide has-icon center" type="password" id="password" name="password"
                                placeholder="Password" required>
-                        <span class="icon_lock_alt input-icon"></span>
+                        <span class="icon-lock input-icon"></span>
                     </div>
                     <button class="wide primary" type="submit">
                         Sign in
