--- a/public/style/base.less
+++ b/public/style/base.less
@@ -1,19 +1,18 @@
-* { //-webkit-box-shadow: inset 0 0 0 1px red;
-  //-moz-box-shadow: inset 0 0 0 red;
-  //box-shadow: inset 0 0 0 1px red;
-}
-
+//* { //-webkit-box-shadow: inset 0 0 0 1px red;
+//  //-moz-box-shadow: inset 0 0 0 red;
+//  //box-shadow: inset 0 0 0 1px red;
+//}
+//
 * {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
-}
-
-*:before,
-*:after {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
+  &:before,
+  &:after {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+  }
 }
 
 html, body {
@@ -28,66 +27,66 @@ html {
 }
 
 body {
-  //font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-family: @base-font;
-  font-size: 1rem;
-  line-height: 1.5;
   color: @font-color;
   -webkit-font-smoothing: antialiased !important;
   text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.004);
-  //background-color: #fff;
-  padding-top: 64px;
-  padding-bottom: 32px;
+  padding-top: @nav-height+32px;
 
   min-height: 100%;
 }
 
-.top-pad {
-  padding-bottom: 20px;
+.block {
+  display: block;
 }
 
-::selection {
-  background: @blue; /* WebKit/Blink Browsers */
-}
-
-::-moz-selection {
-  background: @blue; /* Gecko Browsers */
-}
-
-img {
-  vertical-align: middle;
-}
-
-.pull-right {
-  float: right;
-}
-.pull-left{
-  float: left;
-}
-
-a {
-  color: @link-color;
-}
-
-.wide {
-  width: 100%;
-}
-
-.red, .danger {
-  color: @red;
-}
-
-.clearfix:before,
-.clearfix:after {
-  content: " "; /* 1 */
-  display: table; /* 2 */
-}
-
-.clearfix:after {
-  clear: both;
-}
-
-&.inline {
-  display: inline-block;
-}
-
+//
+//.top-pad {
+//  padding-bottom: 20px;
+//}
+//
+//::selection {
+//  background: @blue; /* WebKit/Blink Browsers */
+//}
+//
+//::-moz-selection {
+//  background: @blue; /* Gecko Browsers */
+//}
+//
+//img {
+//  vertical-align: middle;
+//}
+//
+//.pull-right {
+//  float: right;
+//}
+//.pull-left{
+//  float: left;
+//}
+//
+//a {
+//  color: @link-color;
+//}
+//
+//.wide {
+//  width: 100%;
+//}
+//
+//.red, .danger {
+//  color: @red;
+//}
+//
+//.clearfix:before,
+//.clearfix:after {
+//  content: " "; /* 1 */
+//  display: table; /* 2 */
+//}
+//
+//.clearfix:after {
+//  clear: both;
+//}
+//
+//&.inline {
+//  display: inline-block;
+//}
+//
