--- a/public/style/form.less
+++ b/public/style/form.less
@@ -1,22 +1,26 @@
-
-label {
-  display: block;
-}
-
-fieldset {
-  border: none;
-  margin: 0;
-  padding: 0 0 12px 0;
-}
-
+//
+//label {
+//  display: block;
+//}
+//
+//fieldset {
+//  border: none;
+//  margin: 0;
+//  padding: 0 0 12px 0;
+//}
+//
 input {
   margin: 0;
-  //width:100%;
+  width: 100%;
 
   @media (max-width: @breakpoint) {
     //.narrow-center {
     width: 100%;
     //}
+  }
+
+  &.center {
+    text-align: center;
   }
 }
 
@@ -48,8 +52,8 @@ input[type="password"] {
     border-top-right-radius: 0;
   }
 
-  &:focus {
-    border: 1px solid @blue;
+  &:focus, &:active {
+    border: 1px solid @primary;
     outline: 0;
   }
 
@@ -62,11 +66,11 @@ input[type="password"] {
   z-index: 2;
   display: block;
   width: @input-height;
-  height: @input-height;
-  line-height: @input-height;
+  height: @input-height !important;
+  line-height: @input-height !important;
   text-align: center;
   pointer-events: none;
-  color: @grey-dark;
+  color:inherit;
 }
 
 textarea, select {
@@ -96,13 +100,13 @@ textarea, select {
   padding: 10px 15px;
   border-top-right-radius: 3px;
   border-top-left-radius: 3px;
-  color: @white;
-  background-color: @font-color;
-  border-color: @font-color;
+  color: #FFF;
+  background-color: @primary;
+  border-color: @primary;
   text-align: center;
   font-size: 2rem;
   a {
-    color: @white;
+    color: #FFF;
   }
 
   img {
@@ -113,7 +117,7 @@ textarea, select {
 }
 
 .login-body {
-  background: @white;
+  background: #FFF;
   padding: 15px;
   border-radius: 4px;
 }
@@ -129,25 +133,16 @@ textarea, select {
 }
 
 input:-webkit-autofill {
-  -webkit-box-shadow: 0 0 0px 1000px @white inset;
+  -webkit-box-shadow: 0 0 0px 1000px #FFF inset;
 }
 
-hr {
-  margin-bottom: 32px;
-
-  border: 0;
-  height: 0;
-  border-top: 1px solid rgba(0, 0, 0, 0.1);
-  border-bottom: 1px solid rgba(255, 255, 255, 0.3);
-
-}
-
-.document {
-  word-wrap: break-word;
-  img {
-    @media (max-width: @breakpoint) {
-      width: 100%;
-      height: auto;
-    }
-  }
-}
+//
+//hr {
+//  margin-bottom: 32px;
+//
+//  border: 0;
+//  height: 0;
+//  border-top: 1px solid rgba(0, 0, 0, 0.1);
+//  border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+//
+//}
