--- a/public/style/img.less
+++ b/public/style/img.less
@@ -3,21 +3,21 @@ img.center {
   margin-left: auto;
   margin-right: auto;
 }
-
-img.circle {
-  border-radius: 50%;
-}
-
-img.abs-bottom {
-  position: absolute;
-  bottom: 0;
-  z-index: 1000;
-}
-
-img.invert {
-  filter: invert(100%);
-}
-
-image, img {
-  max-width: 100%;
-}
+//
+//img.circle {
+//  border-radius: 50%;
+//}
+//
+//img.abs-bottom {
+//  position: absolute;
+//  bottom: 0;
+//  z-index: 1000;
+//}
+//
+//img.invert {
+//  filter: invert(100%);
+//}
+//
+//image, img {
+//  max-width: 100%;
+//}
