--- a/public/style/style.less
+++ b/public/style/style.less
@@ -1,39 +1,49 @@
 @import "../components/normalize-css/normalize.css";
 
 //colors
-@font-color: #3a3f51;
-@white: #fff;
-@white-dark: #f0f0f0;
-@blue: #3DA2FF;
-//@background: #F0F3FA;
-@background: #F5F8FF;
-//@background:#EEF2F8;
-@grey: #cdd6d9;
-@grey-dark: darken(@grey, 20%);
-@red: #ED5565;
-@green: #48CFAD;
-@danger: @red;
-@success: @green;
-@primary: @blue;
-@link-color: @blue;
-@background-dark: #495062;
+@font-color: #434A54;
 
+//@primary: #ED5565;
+//@primary-dark: #DA4453;
+@primary: @font-color;
+@primary-dark: darken(@primary,8%);
+
+//@white: #fff;
+//@white-dark: #f0f0f0;
+//@blue: #3DA2FF;
+//@background: #F0F3FA;
+@background: #F5F7FA;
+////@background:#EEF2F8;
+@grey: #CCD1D9;
+//@grey-dark: #E6E9ED;
+//@red: #ED5565;
+//@green: #48CFAD;
+//@danger: @red;
+//@success: @green;
+//@primary: @blue;
+//@link-color: @blue;
+//@background-dark: #495062;
+//
 //variables
+@nav-height: 45px;
 @container-width: 980px;
 @breakpoint: 750px;
 @input-height: 38px;
 
 @base-font: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", Arial, sans-serif;
-
+//
 .pillow {
   -webkit-box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.1);
   -moz-box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.1);
   box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.1);
 }
 
-.areyousure {
-  //just IDEA autocompletes this class
-}
+
+
+//
+//.areyousure {
+//  //just IDEA autocompletes this class
+//}
 
 @import "base";
 @import "img";
@@ -49,5 +59,5 @@
 @import "canvas";
 @import "flash";
 @import "table";
-@import "goldengate";
-@import "dragg";
+@import "transition";
+@import "misc";
