--- a/public/style/well.less
+++ b/public/style/well.less
@@ -1,10 +1,10 @@
-.well{
-  background-color: @white;
+.well {
+  background-color: #FFF;
   border-radius: 4px;
-  border:1px solid @grey;
+  border: 1px solid @grey;
   margin-bottom: 20px;
-  padding:8px;
+  padding: 8px;
 
-  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.05);
-  box-shadow: inset 0 1px 1px rgba(0,0,0,.05);
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05);
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05);
 }
