--- a/views/error.ejs
+++ b/views/error.ejs
@@ -7,8 +7,8 @@
     <div class="well code error">
         <span><%- error %></span>
     </div>
-    <a href="mailto:bioinformatics@tsl.ac.uk?subject=I found a bug with the Syn Bio site&body=<%- encodeURI(error) %>"
-       class="button primary center" target="_blank"><span data-icon="&#xe010;"></span> Report
+    <a href="mailto:bioinformatics@tsl.ac.uk?subject=I found a bug with the TransPlant site&body=<%- encodeURI(error) %>"
+       class="button primary center pull-right" target="_blank"><span data-icon="&#xe010;"></span> Report
         this
         bug</a>
     <% } else { %>
