--- a/views/foot.ejs
+++ b/views/foot.ejs
@@ -1,20 +1,10 @@
-<script src="/components/tinymce/tinymce.min.js"></script>
-<script src="/components/tinymce/themes/modern/theme.min.js"></script>
-<script src="/socket.io/socket.io.js"></script>
+<!--<script src="/socket.io/socket.io.js"></script>-->
 <script>
-    var socketURL = window.location.protocol + "//" + window.location.hostname + (window.location.port ? ':' + window.location.port : '');
-    var socket = io.connect(socketURL);
+//    var socketURL = window.location.protocol + "//" + window.location.hostname + (window.location.port ? ':' + window.location.port : '');
+//    var socket = io.connect(socketURL);
 </script>
-<% var plugins = 'image imagetools autolink hr link' %>
-<% plugins.split(' ').map(function(plugin){ %>
-<script src="/components/tinymce/plugins/<%- plugin %>/plugin.min.js"></script>
-<% }) %>
+
 <script src="/js/main.js"></script>
-
-
-<form id="my_form" style="width:0px;height:0;overflow:hidden">
-    <input name="userfile" id="userfile" type="file">
-</form>
 
 
 </body>
