--- a/public/style/transition.less
+++ b/public/style/transition.less
@@ -7,3 +7,10 @@
   -o-transition: background-color @time1 @type;
   transition: background-color @time1 @type;
 }
+
+.transition-color{
+  -webkit-transition: color @time1 @type;
+  -moz-transition: color @time1 @type;
+  -o-transition: color @time1 @type;
+  transition: color @time1 @type;
+}
