--- a/public/style/type.less
+++ b/public/style/type.less
@@ -12,21 +12,24 @@
   font-size: 6rem;
   font-weight: 100;
 }
+
 //
 //.bold {
 //  font-weight: bold;
 //}
 //
-//h1, h2, h3, h4, h5, h6,
-//.h1, .h2, .h3, .h4, .h5, .h6 {
-//  margin-bottom: 1rem;
-//  //font-family: @header-font;
-//  font-family: inherit;
-//  font-weight: 300;
-//  line-height: 1.1;
-//  color: inherit;
-//  margin-top: 0;
-//}
+h1, h2, h3, h4, h5, h6,
+.h1, .h2, .h3, .h4, .h5, .h6 {
+  font-weight: 200;
+  //  margin-bottom: 1rem;
+  //  //font-family: @header-font;
+  //  font-family: inherit;
+  //  font-weight: 300;
+  //  line-height: 1.1;
+  //  color: inherit;
+  //  margin-top: 0;
+}
+
 //
 //h1, .h1 {
 //  font-size: 2.5rem;
