--- a/views/head-no-nav.ejs
+++ b/views/head-no-nav.ejs
@@ -15,6 +15,12 @@
     <link href="/components/simple-line-icons/css/simple-line-icons.css" rel="stylesheet">
     <script src="/components/jquery/dist/jquery.min.js"></script>
 
+
+    <script>
+        <% if(typeof locals.signedInUser != 'undefined'){ %>
+        window.signedInUser = <%- JSON.stringify(locals.signedInUser) %>;
+        <% } %>
+    </script>
 </head>
 
 <body>
