--- a/public/style/misc.less
+++ b/public/style/misc.less
@@ -9,3 +9,16 @@
 .pull-left {
   float: left;
 }
+
+hr {
+  border-top: none;
+  border-bottom: 1px solid @grey;
+
+  margin:16px 0;
+
+}
+
+.wide {
+  width: 100%;
+}
+
