--- a/views/head.ejs
+++ b/views/head.ejs
@@ -3,7 +3,7 @@
 <nav>
     <div class="brand">
         <a href="/" class="block">
-            <!--<img src="/img/brand.png">-->
+            <img src="/img/logo-white.png">
             <span>TransPlant</span>
         </a>
     </div>
