--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,10 +1,12 @@
 <% include ./head.ejs %>
 
 <div class="container">
-    <!--<img src="/img/logo.png" class="center" width="128px" height="auto">-->
+    <img src="/img/logo.png" class="center" width="128px" height="auto">
     <h1 class="center big" style="margin:0">TransPlant</h1>
     <p class="center">Welcome to the TSL Plant Transformation.</p>
 
-    <a href="/new" class="button center">New Request</a>
+    <fieldset>
+        <a href="/new" class="button center">New Request</a>
+    </fieldset>
 </div>
 <% include ./foot.ejs %>
