--- a/public/style/base.less
+++ b/public/style/base.less
@@ -1,18 +1,12 @@
-//* { //-webkit-box-shadow: inset 0 0 0 1px red;
-//  //-moz-box-shadow: inset 0 0 0 red;
-//  //box-shadow: inset 0 0 0 1px red;
-//}
-//
-* {
+
+*,
+*:after,
+*:before {
+  margin: 0;
+  padding: 0;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  &:before,
-  &:after {
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-  }
+  box-sizing: border-box
 }
 
 html, body {
@@ -31,7 +25,8 @@ body {
   color: @font-color;
   -webkit-font-smoothing: antialiased !important;
   text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.004);
-  padding-top: @nav-height+32px;
+  padding-top: @nav-height + 32px;
+  padding-bottom: @nav-height;
 
   min-height: 100%;
 }
