--- a/public/style/button.less
+++ b/public/style/button.less
@@ -23,21 +23,25 @@ input[type="button"] {
   -ms-user-select: none;
   user-select: none;
   border-radius: 4px;
-  //border: 1px solid @grey;
-  border: 1px solid @primary;
+  border: 1px solid @grey;
+  //border: 1px solid @primary;
 
-  .transition-background-color;
-  .transition-color;
+  .transition-all;
 
   &:focus, &:hover {
     border: 1px solid @primary;
     outline: 0;
-    background-color: @primary-dark;
+    background-color: @primary;
     color: white;
   }
 
   &.wide {
     width: 100%;
+  }
+
+  &.tall {
+    height: @input-height * 1.5;
+    line-height: @input-height * 1.5;;
   }
 
   &.primary {
