--- a/public/style/style.less
+++ b/public/style/style.less
@@ -2,28 +2,11 @@
 
 //colors
 @font-color: #434A54;
-
-//@primary: #ED5565;
-//@primary-dark: #DA4453;
-@primary: @font-color;
-@primary-dark: darken(@primary,8%);
-
-//@white: #fff;
-//@white-dark: #f0f0f0;
-//@blue: #3DA2FF;
-//@background: #F0F3FA;
+@primary: #FB5F4B;
+@primary-dark: #E9573F;
 @background: #F5F7FA;
-////@background:#EEF2F8;
 @grey: #CCD1D9;
-//@grey-dark: #E6E9ED;
-//@red: #ED5565;
-//@green: #48CFAD;
-//@danger: @red;
-//@success: @green;
-//@primary: @blue;
-//@link-color: @blue;
-//@background-dark: #495062;
-//
+
 //variables
 @nav-height: 45px;
 @container-width: 980px;
@@ -38,12 +21,18 @@
   box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.1);
 }
 
+.pillow-hover {
+  .transition-box-shadow;
+  &:hover {
+    -webkit-box-shadow: 0 3px 15px 0 rgba(0, 0, 0, 0.15);
+    -moz-box-shadow: 0 3px 15px 0 rgba(0, 0, 0, 0.15);
+    box-shadow: 0 3px 15px 0 rgba(0, 0, 0, 0.15);
+  }
+}
 
-
-//
-//.areyousure {
-//  //just IDEA autocompletes this class
-//}
+.areyousure {
+  //just so IDEA auto-completes this class
+}
 
 @import "base";
 @import "img";
@@ -61,3 +50,4 @@
 @import "table";
 @import "transition";
 @import "misc";
+@import "request";
