--- a/public/style/type.less
+++ b/public/style/type.less
@@ -12,6 +12,12 @@
   font-size: 6rem;
   font-weight: 100;
 }
+.small{
+  font-size: 0.8rem;
+}
+.italic{
+  font-style: italic;
+}
 
 //
 //.bold {
@@ -28,6 +34,11 @@ h1, h2, h3, h4, h5, h6,
   //  line-height: 1.1;
   //  color: inherit;
   //  margin-top: 0;
+
+  //@media only screen and (max-width: @breakpoint) {
+  //  font-size: 0.1rem;
+  //}
+
 }
 
 //
