--- a/views/requests/new.ejs
+++ b/views/requests/new.ejs
@@ -6,7 +6,5 @@
 
 </div>
 
-<script src="/components/react/react.js"></script>
-<script src="/components/react/react-dom.min.js"></script>
-<script src="/js/app.min.js"></script>
+<script src="/js/app.js"></script>
 <% include ../foot.ejs %>
