--- a/public/style/button.less
+++ b/public/style/button.less
@@ -13,7 +13,7 @@ input[type="button"] {
   display: inline-block;
   padding: 0 1rem;
   font-size: 1rem;
-  font-weight: 600;
+  font-weight: @weight-medium;
   text-align: center;
   white-space: nowrap;
   vertical-align: middle;
@@ -60,34 +60,4 @@ input[type="button"] {
     margin: 0 auto;
     display: table;
   }
-
-  //
-  //  &.icon {
-  //    padding: 0 4px;
-  //    width: @input-height;
-  //    font-size: 1.5rem;
-  //  }
-  //
-  //  &.disabled {
-  //    opacity: 0.65;
-  //    cursor: not-allowed;
-  //    pointer-events: none;
-  //  }
-  //
-  //  &.inputbutton {
-  //    padding-top: 0;
-  //    margin-left: -6px;
-  //    border-bottom-left-radius: 0;
-  //    border-top-left-radius: 0;
-  //    img {
-  //      height: 20px;
-  //      vertical-align: middle;
-  //      padding-bottom: 4px;
-  //    }
-  //  }
-  //  &.small {
-  //    height: 20px;
-  //    line-height: 20px;
-  //    padding: 0 4px;
-  //  }
 }
