--- a/public/style/style.less
+++ b/public/style/style.less
@@ -1,4 +1,6 @@
 @import "../components/normalize-css/normalize.css";
+@import url('https://fonts.googleapis.com/css?family=Raleway:300,400,700');
+
 
 //colors
 @font-color: #434A54;
@@ -13,7 +15,12 @@
 @breakpoint: 750px;
 @input-height: 38px;
 
-@base-font: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", Arial, sans-serif;
+//font-sizes
+@weight-light: 300;
+@weight-medium: 400;
+@weight-bold:700;
+
+@base-font: "Raleway", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", Arial, sans-serif;
 //
 .pillow {
   -webkit-box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.1);
@@ -40,14 +47,14 @@
 @import "type";
 @import "form";
 @import "nav";
-@import "tile";
 @import "button";
 @import "well";
 @import "code";
-@import "badge";
 @import "canvas";
 @import "flash";
-@import "table";
 @import "transition";
 @import "misc";
 @import "request";
+
+
+@import "token";
