--- a/public/style/type.less
+++ b/public/style/type.less
@@ -1,94 +1,32 @@
-//
-//[hidden] {
-//  display: none !important;
-//}
-//
-//p {
-//  margin-top: 0;
-//  margin-bottom: 1rem;
-//}
-//
+
 .big {
   font-size: 6rem;
-  font-weight: 100;
 }
-.small{
+
+.small {
   font-size: 0.8rem;
 }
-.italic{
+
+.italic {
   font-style: italic;
 }
 
-//
-//.bold {
-//  font-weight: bold;
-//}
-//
 h1, h2, h3, h4, h5, h6,
 .h1, .h2, .h3, .h4, .h5, .h6 {
-  font-weight: 200;
-  //  margin-bottom: 1rem;
-  //  //font-family: @header-font;
-  //  font-family: inherit;
-  //  font-weight: 300;
-  //  line-height: 1.1;
-  //  color: inherit;
-  //  margin-top: 0;
-
-  //@media only screen and (max-width: @breakpoint) {
-  //  font-size: 0.1rem;
-  //}
-
+  font-weight: @weight-light;
 }
 
-//
-//h1, .h1 {
-//  font-size: 2.5rem;
-//}
-//
-//h2, .h2 {
-//  font-size: 2rem;
-//}
-//
-//h3, .h3 {
-//  font-size: 1.75rem;
-//}
-//
-//h4, .h4 {
-//  font-size: 1.5rem;
-//}
-//
-//h5, .h5 {
-//  font-size: 1.25rem;
-//}
-//
-//h6, .h6 {
-//  font-size: 1rem;
-//}
-//
 .center {
   text-align: center;
 }
 
-//
 a {
   text-decoration: none;
-  //color: @font-color;
+  color: @primary-dark;
 }
 
-//
-//.small {
-//  font-size: 0.8rem;
-//}
-//
-//.trans_black {
-//  color: rgba(0, 0, 0, 0.4);
-//}
-//
-//.disabled {
-//  color: @danger;
-//  a {
-//    color: @danger;
-//  }
-//}
-//
+.tip {
+  color: @primary;
+  font-style: italic;
+}
+
